# box2d-lite

./: CMakeLists.txt
include/box2d-lite/: Arbiter.h  Body.h  MathUtils.h  World.h
include/our-physics/: OurArbiter.h  OurBody.h  OurJoint.h  OurMath.h  OurWorld.h
samples/: CMakeLists.txt  OriginalMainCode.txt  main.cpp
src/: Arbiter.cpp  Body.cpp  Collide.cpp  World.cpp  World.txt
src-our-physics/: CMakeLists.txt  OurArbiter.cpp  OurCollide.cpp  OurJoint.cpp  OurWorld.cpp
src/our-physics/: CMakeLists.txt  OurArbiter.cpp  OurBody.cpp  OurCollide.cpp  OurJoint.cpp  OurWorld.cpp
